# bncapi

./: .gitignore  .gitmodules  Dockerfile  README.md  build.sh  create_dev_db.sql  docker-compose.yml  manage.py  output.dbml  ping.py  pyproject.toml  render.yaml  requirements.txt  setup_dev_db.sh
.github/workflows/: ping.yml
bncapi/: api.py  asgi.py  settings.py  urls.py  wsgi.py
games/: admin.py  api.py  apps.py  consumers.py  middleware.py  models.py  routing.py  schemas.py  services.py  utils.py
games/migrations/: 0001_initial.py  0002_remove_room_online_room_code_length_and_more.py  0003_room_type_alter_room_name.py  0004_gameroom.py  0005_room_active_users_room_created_at_room_game_state_and_more.py  0006_rename_type_room_game_type.py  0007_delete_gameroom.py  0008_alter_room_name_alter_room_secret_code.py  0009_alter_room_secret_code.py  0010_alter_room_secret_code.py  0011_remove_room_active_users_remove_room_updated_at_and_more.py
libs/: enc_library.py
scripts/: ping.py
users/: api.py  apps.py  models.py  schemas.py  utils.py
users/migrations/: 0001_initial.py  0002_alter_user_username.py
