[project]
name = "bncapi"
version = "0.1.0"
description = "Backend API for bnc game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-ninja-extra>=0.30.1",
    "django-ninja>=1.4.3",
    "django-cors-headers>=4.7.0",
    "cryptography>=45.0.6",
    "django-activity-stream>=2.0.0",
]
